[project]
name = "breast-segmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "absl-py==2.2.2",
    "albucore==0.0.24",
    "albumentations==2.0.6",
    "annotated-types==0.7.0",
    "black==25.1.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "contextlib2==21.6.0",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "docker-pycreds==0.4.0",
    "easydict==1.13",
    "einops==0.8.1",
    "eval-type-backport==0.2.2",
    "filelock==3.18.0",
    "fonttools==4.57.0",
    "fsspec==2025.3.2",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "idna==3.10",
    "importlib-resources==6.5.2",
    "isort==6.0.1",
    "jinja2==3.1.6",
    "joblib==1.4.2",
    "kagglehub==0.3.12",
    "kiwisolver==1.4.7",
    "markupsafe==3.0.2",
    "matplotlib==3.9.4",
    "ml-collections==0.1.1",
    "mpmath==1.3.0",
    "mypy-extensions==1.1.0",
    "networkx==3.2.1",
    "numpy==2.0.2",
    "opencv-python==4.11.0.86",
    "opencv-python-headless==4.11.0.86",
    "packaging==25.0",
    "pathspec==0.12.1",
    "pillow==11.2.1",
    "platformdirs==4.3.7",
    "protobuf==6.30.2",
    "psutil==7.0.0",
    "pydantic==2.11.4",
    "pydantic-core==2.33.2",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv>=1.1.1",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "scikit-learn==1.6.1",
    "scipy==1.13.1",
    "sentry-sdk==2.27.0",
    "setproctitle==1.3.6",
    "simsimd==6.2.1",
    "six==1.17.0",
    "sklearn==0.0",
    "smmap==5.0.2",
    "stringzilla==3.12.5",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tomli==2.2.1",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "tqdm==4.67.1",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "urllib3==2.4.0",
    "wandb==0.19.10",
    "zipp==3.21.0",
]
